--- a/n2sys_wg_server.service
+++ b/n2sys_wg_server.service
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 User=guojunyi
-ExecStart=@A
+ExecStart=/usr/bin/python3 /home/guojunyi/N2SysWireguardManager/server.py
 Restart=always
 RestartSec=5
 WorkingDirectory=/home/guojunyi/N2SysWireguardManager/
